force-app/main/default/objects/HAM_Event_Line_Item__c/HAM_Event_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Stores individual line items from Blackthorn sales documents, migrated as part of the Blackthorn to Cvent migration pipeline.</description>
    <label>HAM Event Line Item</label>
    <nameField>
        <displayFormat>LI-{00000000}</displayFormat>
        <label>Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HAM Event Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>