force-app/main/default/objects/HAM_Event_Line_Item__c/fields/CventEvents_Event__c.field-meta.xml
<CustomField>
    <fullName>CventEvents_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Cvent event this line item is associated with.</description>
    <inlineHelpText>The Cvent event linked to this line item.</inlineHelpText>
    <label>Cvent Event</label>
    <referenceTo>CventEvents__Event__c</referenceTo>
    <relationshipLabel>HAM Event Line Items</relationshipLabel>
    <relationshipName>HAM_Event_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>