force-app/main/default/objects/HAM_Event_Line_Item__c/fields/HAM_Attendee__c.field-meta.xml
<CustomField>
    <fullName>HAM_Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Cvent attendee this line item is associated with.</description>
    <inlineHelpText>The attendee linked to this line item.</inlineHelpText>
    <label>Attendee</label>
    <referenceTo>CventEvents__Attendee__c</referenceTo>
    <relationshipLabel>HAM Event Line Items</relationshipLabel>
    <relationshipName>HAM_Event_Line_Items_Attendee</relationshipName>
    <type>Lookup</type>
</CustomField>