force-app/main/default/objects/HAM_Event_Line_Item__c/fields/HAM_BT_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>HAM_BT_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Traceability lookup to the original Blackthorn line item this record was migrated from. Will be empty once Blackthorn is decommissioned.</description>
    <inlineHelpText>The original Blackthorn line item this record was migrated from. Used for migration QC and validation only.</inlineHelpText>
    <label>BT Line Item</label>
    <referenceTo>bt_stripe__Line_Item__c</referenceTo>
    <relationshipLabel>HAM Event Line Items</relationshipLabel>
    <relationshipName>HAM_Event_Line_Items_BT</relationshipName>
    <type>Lookup</type>
</CustomField>