force-app/main/default/objects/HAM_Event_Line_Item__c/fields/HAM_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>HAM_Discount_Amount__c</fullName>
    <description>Discount amount applied to this line item.</description>
    <inlineHelpText>Discount deducted from the unit price on this line item.</inlineHelpText>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>