force-app/main/default/objects/HAM_Event_Line_Item__c/fields/HAM_Event_Revenue_Amount__c.field-meta.xml
<CustomField>
    <fullName>HAM_Event_Revenue_Amount__c</fullName>
    <description>Hamilton-specific event revenue amount for this line item, used for GL reporting.</description>
    <inlineHelpText>Event revenue amount allocated to this line item for GL reporting purposes.</inlineHelpText>
    <label>Event Revenue Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>