force-app/main/default/objects/HAM_Event_Line_Item__c/fields/HAM_Event_Revenue_GL__c.field-meta.xml
<CustomField>
    <fullName>HAM_Event_Revenue_GL__c</fullName>
    <description>Hamilton GL number for event revenue allocation on this line item.</description>
    <inlineHelpText>GL account number used for event revenue reporting on this line item.</inlineHelpText>
    <label>Event Revenue GL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>