force-app/main/default/objects/HAM_Event_Line_Item__c/fields/HAM_Gift_Amount__c.field-meta.xml
<CustomField>
    <fullName>HAM_Gift_Amount__c</fullName>
    <description>Hamilton-specific gift amount for this line item, used for gift processing and reporting.</description>
    <inlineHelpText>Gift portion of this line item amount for gift processing purposes.</inlineHelpText>
    <label>Gift Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>