force-app/main/default/objects/HAM_Event_Line_Item__c/fields/HAM_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>HAM_Item_Name__c</fullName>
    <description>Name of the line item as migrated from Blackthorn.</description>
    <inlineHelpText>The name or description of this line item.</inlineHelpText>
    <label>Item Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>