force-app/main/default/objects/HAM_Event_Line_Item__c/fields/HAM_Item_Session__c.field-meta.xml
<CustomField>
    <fullName>HAM_Item_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the item-session record associated with this line item, linking the ticket-session pairing to the purchase.</description>
    <inlineHelpText>The item-session record associated with this line item.</inlineHelpText>
    <label>Item Session</label>
    <referenceTo>HAM_Event_Item_Session__c</referenceTo>
    <relationshipLabel>HAM Event Line Items</relationshipLabel>
    <relationshipName>HAM_Event_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>