force-app/main/default/objects/HAM_Event_Line_Item__c/fields/HAM_Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>HAM_Net_Amount__c</fullName>
    <description>Net amount for this line item after discounts but before tax.</description>
    <inlineHelpText>Net amount for this line item after discounts, before tax.</inlineHelpText>
    <label>Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>