force-app/main/default/objects/HAM_Event_Line_Item__c/fields/HAM_Quantity__c.field-meta.xml
<CustomField>
    <fullName>HAM_Quantity__c</fullName>
    <description>Quantity of items on this line item.</description>
    <inlineHelpText>Number of units for this line item.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>