force-app/main/default/objects/HAM_Event_Line_Item__c/fields/HAM_Sales_Document__c.field-meta.xml
<CustomField>
    <fullName>HAM_Sales_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the sales document this line item belongs to.</description>
    <inlineHelpText>The sales document that contains this line item.</inlineHelpText>
    <label>Sales Document</label>
    <referenceTo>HAM_Event_Sales_Document__c</referenceTo>
    <relationshipLabel>HAM Event Line Items</relationshipLabel>
    <relationshipName>HAM_Event_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>