force-app/main/default/objects/HAM_Event_Line_Item__c/fields/HAM_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>HAM_Tax_Amount__c</fullName>
    <description>Tax amount applied to this line item.</description>
    <inlineHelpText>Tax portion of the total amount for this line item.</inlineHelpText>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>