force-app/main/default/objects/HAM_Event_Line_Item__c/fields/HAM_Ticket__c.field-meta.xml
<CustomField>
    <fullName>HAM_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the event ticket this line item is for.</description>
    <inlineHelpText>The ticket type associated with this line item.</inlineHelpText>
    <label>Ticket</label>
    <referenceTo>HAM_Event_Ticket__c</referenceTo>
    <relationshipLabel>HAM Event Line Items</relationshipLabel>
    <relationshipName>HAM_Event_Line_Items_Ticket</relationshipName>
    <type>Lookup</type>
</CustomField>