force-app/main/default/objects/HAM_Event_Line_Item__c/fields/HAM_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>HAM_Total_Amount__c</fullName>
    <description>Total amount for this line item including tax and after discounts.</description>
    <inlineHelpText>Total charged amount for this line item.</inlineHelpText>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>