force-app/main/default/objects/HAM_Event_Line_Item__c/fields/HAM_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>HAM_Unit_Price__c</fullName>
    <description>Unit price of this line item before discounts and tax.</description>
    <inlineHelpText>Price per unit for this line item.</inlineHelpText>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>